...
    <Button
        android:onClick="writeReviewButtonClicked"
        android:layout_width="400px"
        android:layout_height="150px"
        android:text="@string/write_review"
        android:textColor="@color/primary"
        android:id="@+id/writeReviewButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/primaryDark"/>

</RelativeLayout>

