...
        completions."
    </string>
    <string name="go_to_scan">Scan Item</string>
    <string name="camera_message">This is the camera.</string>
    <string name="upc">UPC Code</string>
    <string name="write_review_hint">You can write your review here.</string>
    <string name="write_review_submit">Submit Review</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="review_title">Title your review here</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="write_review">Write Review</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
...
