...
            android:layout_height="wrap_content"
            android:id="@+id/button">

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="400px"
            android:layout_height="150px"
            android:text="@string/action_sign_in_short"
            android:background="@color/primaryDark"
            android:textColor="@color/primary"
...
            android:id="@+id/register_button"
            android:text="@string/action_register"
            android:background="@color/primaryDark"
            android:textColor="@color/primary"
            android:layout_width="400px"
            android:layout_height="150px"
            android:layout_below="@+id/password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/password"
...
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@+id/email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
...
